# intelligent_message_routing

./: .gitignore  Makefile  README.md  pyproject.toml  slides.md
app/: __init__.py  __main__.py  classify.py  config.py  draft.py  eval.py  guardrails.py  kb.py  llm.py  mtl.py  redact.py  run.py  train_mtl.py
assignment/data/: messages.csv  pii_patterns.yaml
assignment/data/kb/: auth_safety.md  card_lost_stolen.md  credit_limit_policy.md  dispute_timelines.md  general_servicing.md  suspected_fraud.md
models/: mtl_model.joblib
openspec/changes/intelligent-message-routing-guardrails/: design.md  proposal.md  tasks.md
openspec/changes/intelligent-message-routing-guardrails/specs/draft-response/: spec.md
openspec/changes/intelligent-message-routing-guardrails/specs/evaluation-guardrails/: spec.md
openspec/changes/intelligent-message-routing-guardrails/specs/intent-classification/: spec.md
openspec/changes/intelligent-message-routing-guardrails/specs/pii-redaction/: spec.md
pic/: slides.md
tests/: __init__.py  test_redact.py
